Fixed contrast and added hover

--- a/Lesson03/styles/chamber_of_commerce.css
+++ b/Lesson03/styles/chamber_of_commerce.css
@@ -13,18 +13,51 @@
         margin-right: auto;
         text-align: center;
         color: #454545;
-        background-color: #93b7be
+        background-color: #b1d1d3
+    }
+
+    .nav-bar, .font-links{
+        display: flex;
+        text-align: center;
+        background-color: #d3e5e5; 
+    }
+
+    .font-links{
+        margin-top: 30px;
+    }
+
+    a{
+        display: flex;
+        text-align: center;
+        color: #454545;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    a:link {
+        text-decoration: none;
+        text-align: center;
+        color: #454545;
+    }
+
+    .nav-bar a:hover, .font-links a:hover{
+        display: flex;
+        grid-template-columns: 1fr 1fr 1fr;
+        text-align: center;
+        background-color: #eedfd3;
+        color: #454545;
+        width: 100px;
     }
 
     .intro, .design{
         display: inline-block;
         grid-template-columns: 1fr 1fr 1fr;
         width: 1200px;
-        height: 150px;
+        height: 180px;
         padding: 10px;
         text-align: center;
         color: #454545;
-        background-color: #93b7be
+        background-color: #b1d1d3
     }
 
     .personas img{
@@ -66,7 +99,7 @@
         margin-top: 30px;
         text-align: center;
         color: #454545;
-        background-color: #d5c7bc;
+        background-color: #eedfd3;
     }
 
     .purpose{
@@ -75,14 +108,14 @@
         height: 130px;
         text-align: center;
         border-radius: 20px;
-        color: #785964;
-        background-color: #d5c7bc;
+        color: #454545;;
+        background-color: #eedfd3;
     }
 
     main .hank-hardware-owner{
         display: block;
         background-color: #785964;
-        color: #d5c7bc;
+        color: #f2e8e1;
         border-radius: 20px;
         margin-top: 30px;
         float: left;
@@ -95,7 +128,7 @@
     main .julie-restauranteur{
         display: block;
         background-color: #785964;
-        color: #d5c7bc;
+        color: #eedfd3;
         border-radius: 20px;
         margin-top: 30px;
         float: right;
@@ -112,7 +145,7 @@
         margin-top: 800px;
         border-radius: 20px;
         padding: 20px;
-        color:#d5c7bc;
+        color:#eedfd3;
         background-color: #454545;
     }
 
