--- a/Lesson03/styles/chamber_of_commerce_medium.css
+++ b/Lesson03/styles/chamber_of_commerce_medium.css
@@ -13,18 +13,18 @@
         margin-right: auto;
         text-align: center;
         color: #454545;
-        background-color: #93b7be
+        background-color: #b1d1d3
     }
 
     .intro, .design{
         display: inline-block;
         grid-template-columns: 1fr 1fr 1fr;
         width: 900px;
-        height: 150px;
+        height: 180px;
         padding: 10px;
         text-align: center;
         color: #454545;
-        background-color: #93b7be
+        background-color: #b1d1d3
     }
 
     .personas img{
@@ -59,6 +59,25 @@
         font-size: large;
     }
 
+    .font-links{
+        margin-top: 30px;
+    }
+
+    .nav-bar, .font-links{
+        display: flex;
+        text-align: center;
+        background-color: #d3e5e5; 
+    }
+
+    .nav-bar a:hover, .font-links a:hover{
+        display: flex;
+        grid-template-columns: 1fr 1fr 1fr;
+        text-align: center;
+        background-color: #eedfd3;
+        color: #454545;
+        width: 100px;
+    }
+
     .personas{
         display: inline-block;
         width: 900px;
@@ -67,7 +86,7 @@
         padding: 20px;
         text-align: center;
         color: #454545;
-        background-color: #d5c7bc;
+        background-color: #eedfd3;
     }
 
     .purpose{
@@ -77,14 +96,14 @@
         padding: 20px;
         text-align: center;
         border-radius: 20px;
-        color: #785964;
-        background-color: #d5c7bc;
+        color: #454545;
+        background-color: #eedfd3;
     }
 
     main .hank-hardware-owner{
         display: inline-block;
         background-color: #785964;
-        color: #d5c7bc;
+        color: #eedfd3;
         border-radius: 20px;
         margin-top: 50px;
         padding: 20px;
@@ -97,7 +116,7 @@
     main .julie-restauranteur{
         display: inline-block;
         background-color: #785964;
-        color: #d5c7bc;
+        color: #eedfd3;
         border-radius: 20px;
         margin-top: 30px;
         padding: 20px;
@@ -115,7 +134,7 @@
         margin-top: 100px;
         border-radius: 20px;
         padding: 20px;
-        color:#d5c7bc;
+        color:#eedfd3;
         background-color: #454545;
     }
 
@@ -130,7 +149,7 @@
         height: 30px;
         margin-right: 10px;
         margin-top: 10px;
-        background-color: #93b7be;
+        background-color: #b1d1d3;
         color: #454545;
         border-radius: 15px;
     }
@@ -151,7 +170,7 @@
         height: 30px;
         margin-right: 10px;
         margin-top: 10px;
-        background-color: #d5c7bc;
+        background-color: #eedfd3;
         color: #454545;
         border-radius: 15px;
     }
@@ -163,7 +182,7 @@
         margin-right: 10px;
         margin-top: 10px;
         background-color: #785964;
-        color: #d5c7bc;
+        color: #eedfd3;
         border-radius: 15px;
     }
 
@@ -174,7 +193,7 @@
         margin-right: 10px;
         margin-top: 10px;
         background-color: #454545;
-        color: #d5c7bc;
+        color: #eedfd3;
         border-radius: 15px;
     }
 
@@ -186,7 +205,7 @@
         margin-right: 30px;
         margin-top: 30px;
         color: #454545;
-        background-color: #d5c7bc;
+        background-color: #eedfd3;
     }
 
     .font-2{
@@ -207,7 +226,7 @@
         padding: 20px;
         margin-right: 30px;
         margin-top: 30px;
-        color: #d5c7bc;
+        color: #eedfd3;
         background-color:#785964
     }
 
