--- a/Lesson03/styles/chamber_of_commerce_small.css
+++ b/Lesson03/styles/chamber_of_commerce_small.css
@@ -2,24 +2,63 @@
     display: block;
     grid-template-columns: 1fr 1fr 1fr;
     width: 450px;
-    height: 200px;
+    height: 230px;
     padding: 15px;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
     color: #454545;
-    background-color: #93b7be
+    background-color: #b1d1d3
+}
+
+.nav-bar{
+    display: flex;
+    text-align: center;
+    background-color: #d3e5e5; 
+}
+
+a{
+    display: flex;
+    text-align: center;
+    color: #454545;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+a:link {
+    text-decoration: none;
+    text-align: center;
+    color: #454545;
+}
+
+.nav-bar a:hover, .font-links a:hover{
+    display: flex;
+    grid-template-columns: 1fr 1fr 1fr;
+    text-align: center;
+    background-color: #eedfd3;
+    color: #454545;
+    width: 100px;
+}
+
+.font-links{
+    margin-top: 30px;
+}
+
+.nav-bar, .font-links{
+    display: flex;
+    text-align: center;
+    background-color: #d3e5e5; 
 }
 
 .intro, .design{
     display: inline-block;
     grid-template-columns: 1fr 1fr 1fr;
     width: 450px;
-    height: 200px;
+    height: 230px;
     padding: 10px;
     text-align: center;
     color: #454545;
-    background-color: #93b7be
+    background-color: #b1d1d3
 }
 
 .personas img{
@@ -77,7 +116,7 @@ main img{
     padding: 20px;
     text-align: center;
     color: #454545;
-    background-color: #d5c7bc;
+    background-color: #eedfd3;
 }
 
 .purpose{
@@ -88,7 +127,7 @@ main img{
     text-align: center;
     border-radius: 20px;
     color: #785964;
-    background-color: #d5c7bc;
+    background-color: #eedfd3;
 }
 
 main .hank-hardware-owner{
@@ -102,13 +141,13 @@ main .hank-hardware-owner{
     margin-right: auto;
     text-align: center;
     width: 250px;
-    height: 400px;
+    height: 430px;
 }
 
 main .julie-restauranteur{
     display: inline-block;
     background-color: #785964;
-    color: #d5c7bc;
+    color: #eedfd3;
     border-radius: 20px;
     margin-top: 20px;
     padding: 20px;
@@ -116,17 +155,17 @@ main .julie-restauranteur{
     margin-right: auto;
     text-align: center;
     width: 250px;
-    height: 400px;
+    height: 450px;
 }
 
 .scenarios{
     display: inline-block;
     width: 400px;
     height: 1300px;
-    margin-top: 30px;
+    margin-top: 60px;
     border-radius: 20px;
     padding: 20px;
-    color:#d5c7bc;
+    color:#eedfd3;
     background-color: #454545;
 }
 
@@ -150,7 +189,7 @@ main img{
     height: 30px;
     margin-right: 10px;
     margin-top: 10px;
-    background-color: #93b7be;
+    background-color: #b1d1d3;
     color: #454545;
     border-radius: 15px;
 }
@@ -171,7 +210,7 @@ main img{
     height: 30px;
     margin-right: 10px;
     margin-top: 10px;
-    background-color: #d5c7bc;
+    background-color: #eedfd3;
     color: #454545;
     border-radius: 15px;
 }
@@ -183,7 +222,7 @@ main img{
     margin-right: 10px;
     margin-top: 10px;
     background-color: #785964;
-    color: #d5c7bc;
+    color: #eedfd3;
     border-radius: 15px;
 }
 
@@ -194,37 +233,37 @@ main img{
     margin-right: 10px;
     margin-top: 10px;
     background-color: #454545;
-    color: #d5c7bc;
+    color: #eedfd3;
     border-radius: 15px;
 }
 
 .font-1{
     display: inline-block;
     width: 400px;
-    height: 200px;
+    height: 180px;
     padding: 20px;
     margin-top: 30px;
     color: #454545;
-    background-color: #d5c7bc;
+    background-color: #eedfd3;
 }
 
 .font-2{
     display: inline-block;
     width: 400px;
-    height: 200px;
+    height: 180px;
     padding: 20px;
     margin-top: 30px;
     color: #454545;
-    background-color: #93b7be;
+    background-color: #b1d1d3;
 }
 
 .font-3{
     display: inline-block;
     width: 400px;
-    height: 200px;
+    height: 180px;
     padding: 20px;
     margin-top: 30px;
-    color: #d5c7bc;
+    color: #eedfd3;
     background-color:#785964
 }
 
